# kanji_quiz

./: README.md  TOCFL.ipynb  local_database.db  pyproject.toml
backend/: db.sqlite3  manage.py
backend/api/: models.py  serializers.py  urls.py  views.py
backend/api/migrations/: 0001_initial.py  0002_load_hanzi_data.py  0003_remove_pinyin.py
backend/hanzi_backend/: asgi.py  settings.py  wsgi.py
data/: hanzi_data.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  Search.svelte  main.js
hanzi-memorizer/: index.html  script.js  style.css
scripts/: create_db.py  populate_db.py
src/: Kanji_Page.html  index.js  style.css
src/language/jp/: Kanji_Page.html  index.js  k1.js  k2.js  k3.js  k4.js  kj.js
src/language/zh/: Hanzi_Page.html  index.js  tocfl.js
src/script/: csv_to_json_joyo.py  csv_to_json_tocfl.py  load_tocfl_dict.js  merge_tocfl_files.py
