[tool.poetry]
name = "kanji-quiz"
version = "0.1.0"
description = ""
authors = ["manu <giambi.manuel@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.3"
django-cors-headers = "4.6.0"
djangorestframework = "3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
